hphp/hack/test/typecheck/coeffect_encapsulation/bad_constraint_nonsense.php.exp
ERROR: File "bad_constraint_nonsense.php", line 5, characters 14-18:
Internal error: Unexpected context hint (Other[0000])
ERROR: File "bad_constraint_nonsense.php", line 5, characters 14-18:
Contexts cannot be bounded by polymorphic contexts (Parsing[1002])
ERROR: File "bad_constraint_nonsense.php", line 5, characters 13-19:
Invalid type hint (Typing[4062])
  File "bad_constraint_nonsense.php", line 5, characters 18-18:
  You are trying to access the type constant `C` but this is an undefined value
  File "bad_constraint_nonsense.php", line 5, characters 14-18:
  Definition is here
